--- a/src/index.css
+++ b/src/index.css
@@ -26,13 +26,13 @@ html,body{
 
 @font-face {
   font-family: "primary-font";
-  src: url("fonts/primary_font.woff2") format("woff2");
+  src: url("/fonts/primary_font.woff2") format("woff2");
   font-weight: 400;
   font-style: normal;
 }
 @font-face {
   font-family: "secondary-font";
-  src: url("fonts/secondary_font.woff2") format("woff2");
+  src: url("/fonts/secondary_font.woff2") format("woff2");
   font-weight: 400;
   font-style: normal;
 }
