--- a/src/index.css
+++ b/src/index.css
@@ -32,8 +32,64 @@ html,body{
 }
 @font-face {
   font-family: "secondary-font";
-  src: url("/fonts/secondary_font.woff2") format("woff2");
+  src: url("/fonts/Gilroy-Thin.ttf") format("truetype");
+  font-weight: 100;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: "secondary-font";
+  src: url("/fonts/Gilroy-UltraLight.ttf") format("truetype");
+  font-weight: 200;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: "secondary-font";
+  src: url("/fonts/Gilroy-Light.ttf") format("truetype");
+  font-weight: 300;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: "secondary-font";
+  src: url("/fonts/Gilroy-Regular.ttf") format("truetype");
   font-weight: 400;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: "secondary-font";
+  src: url("/fonts/Gilroy-Medium.ttf") format("truetype");
+  font-weight: 500;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: "secondary-font";
+  src: url("/fonts/Gilroy-SemiBold.ttf") format("truetype");
+  font-weight: 600;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: "secondary-font";
+  src: url("/fonts/Gilroy-Bold.ttf") format("truetype");
+  font-weight: 700;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: "secondary-font";
+  src: url("/fonts/Gilroy-ExtraBold.ttf") format("truetype");
+  font-weight: 800;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: "secondary-font";
+  src: url("/fonts/Gilroy-Black.ttf") format("truetype");
+  font-weight: 900;
   font-style: normal;
 }
 
@@ -42,7 +98,7 @@ html,body{
 }
 
 .secondary-font{
-    font-family: "gilroy";
+    font-family: "secondary-font";
 }
 
 
