converted woff2 fonts to ttf fonts

--- a/src/index.css
+++ b/src/index.css
@@ -26,7 +26,7 @@ html,body{
 
 @font-face {
   font-family: "primary-font";
-  src: url("/fonts/primary_font.woff2") format("woff2");
+  src: url("/fonts/primary_font.ttf") format("truetype");
   font-weight: 400;
   font-style: normal;
 }
