--- a/src/index.css
+++ b/src/index.css
@@ -135,3 +135,13 @@ html,body{
     width: 100%;
 }
 
+.hide-scrollbar{
+    -ms-overflow-style: none; /* IE and Edge */
+    scrollbar-width: none; /* Firefox */
+}
+.hide-scrollbar::-webkit-scrollbar {
+    display: none; /* Chrome, Safari and Opera */
+}
+
+    
+
